# mcpe

./: .gitignore  CMakeLists.txt  GameMods.hpp  build-wasm.bat  build-wasm.sh
.github/workflows/: build.yml
compat/: LegacyCPPCompatibility.hpp  PlatformDefinitions.h  SDLKeyCodes.h
source/: CMakeLists.txt
source/client/: CMakeLists.txt
source/client/app/: IGui.cpp  IGui.hpp  IScreen.cpp  IScreen.hpp  Minecraft.cpp  Minecraft.hpp  NinecraftApp.cpp
source/client/gui/: CMakeLists.txt  Gui.cpp  Gui.hpp  Screen.cpp  Screen.hpp
source/client/gui/components/: Button.cpp  Button.hpp  OptionList.cpp  OptionList.hpp  RolledSelectionList.cpp  RolledSelectionList.hpp  ScrolledSelectionList.cpp  ScrolledSelectionList.hpp  TextInputBox.cpp  TextInputBox.hpp  WorldSelectionList.cpp  WorldSelectionList.hpp
source/client/gui/input/: TouchscreenInput_TestFps.cpp  TouchscreenInput_TestFps.hpp
source/client/gui/screens/: ChatScreen.cpp  ChatScreen.hpp  ConfirmScreen.cpp  ConfirmScreen.hpp  CreateWorldScreen.cpp  CreateWorldScreen.hpp  DeathScreen.cpp  DeathScreen.hpp  DirectConnectScreen.cpp  IngameBlockSelectionScreen.cpp  IngameBlockSelectionScreen.hpp  InvalidLicenseScreen.cpp  InvalidLicenseScreen.hpp  JoinGameScreen.cpp  JoinGameScreen.hpp  OptionsScreen.cpp  OptionsScreen.hpp  PauseScreen.cpp  PauseScreen.hpp  ProgressScreen.cpp  ProgressScreen.hpp  RenameMPLevelScreen.cpp  RenameMPLevelScreen.hpp  SavingWorldScreen.cpp  SavingWorldScreen.hpp  SelectWorldScreen.cpp  SelectWorldScreen.hpp  StartMenuScreen.cpp  StartMenuScreen.hpp
source/client/model/: Cube.cpp  Cube.hpp  HumanoidModel.cpp  Model.cpp  Model.hpp  PigModel.cpp  PigModel.hpp
source/client/network/: ClientSideNetworkHandler.cpp  ClientSideNetworkHandler.hpp
source/client/newui/: CMakeLists.txt  Drawer.cpp  Drawer.hpp  Gui.cpp  Gui.hpp  Screen.cpp  Screen.hpp
source/client/newui/controls/: Button.cpp  Button.hpp  IControl.hpp
source/client/newui/screens/: MainScreen.cpp  MainScreen.hpp
source/client/options/: Options.cpp
source/client/player/: LocalPlayer.cpp
source/client/player/input/: CMakeLists.txt  IMoveInput.cpp  IMoveInput.hpp  KeyboardInput.cpp  KeyboardInput.hpp  TouchInputHolder.cpp  TouchInputHolder.hpp  TouchscreenInput_TestFps.cpp  TouchscreenInput_TestFps.hpp  UnifiedTurnBuild.cpp
source/client/renderer/: Font.hpp  Frustum.cpp  Frustum.hpp  GameRenderer.cpp  ItemInHandRenderer.cpp  LevelRenderer.cpp  Matrix.hpp  Tesselator.cpp  Textures.cpp  Textures.hpp  TileRenderer.cpp  TileRenderer.hpp
source/client/renderer/entity/: EntityRenderDispatcher.cpp  EntityRenderDispatcher.hpp  EntityRenderer.cpp  EntityRenderer.hpp  MobRenderer.cpp  TripodCameraRenderer.cpp
source/client/sound/: SoundData.cpp  SoundEngine.hpp  SoundSystem.cpp  SoundSystem.hpp
source/common/: CMakeLists.txt  CThread.cpp  Logger.hpp  Matrix.cpp  Matrix.hpp  Random.hpp  StandardOut.hpp  Timer.cpp  Utils.cpp  Utils.hpp
source/network/: CMakeLists.txt  NetEventCallback.cpp  NetEventCallback.hpp  Packet.hpp  PingedCompatibleServer.hpp  RakNetInstance.hpp  ServerSideNetworkHandler.cpp  ServerSideNetworkHandler.hpp
source/network/packets/: LevelDataPacket.cpp
source/renderer/: CMakeLists.txt
source/server/: CMakeLists.txt  Options.cpp  Server.cpp  Server.hpp
source/world/: CMakeLists.txt
source/world/entity/: Entity.cpp  Entity.hpp  FallingTile.cpp  ItemEntity.cpp  Mob.cpp  Mob.hpp  PathfinderMob.cpp  Pig.cpp  Pig.hpp  Player.cpp  Player.hpp  PrimedTnt.cpp  Rocket.cpp  TripodCamera.cpp  TripodCamera.hpp
source/world/gamemode/: CreativeMode.cpp  GameMode.hpp  SurvivalMode.cpp
source/world/item/: CameraItem.cpp  DoorItem.cpp  DoorItem.hpp  Inventory.cpp  TilePlanterItem.hpp
source/world/level/: CMakeLists.txt  Level.cpp  Level.hpp
source/world/level/levelgen/chunk/: ChunkCache.cpp  LevelChunk.hpp
source/world/level/levelgen/feature/: BirchFeature.cpp  TreeFeature.cpp
source/world/level/storage/: ExternalFileLevelStorage.cpp  ExternalFileLevelStorageSource.cpp  LevelData.hpp  RegionFile.hpp
source/world/tile/: ClothTile.cpp  GlassTile.cpp  GrassTile.cpp  IceTile.cpp  LeafTile.cpp  LeverTile.cpp  LeverTile.hpp  MetalTile.cpp  RedStoneRepeaterTile.cpp  RedStoneRepeaterTile.hpp  RedStoneTorchTile.cpp  Sapling.cpp  StoneSlabTile.cpp  Tile.cpp  Tile.hpp  TorchTile.cpp  TorchUpdateEvent.hpp  WireTile.cpp  WireTile.hpp
